--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
-  <title>Frontend Mentor | Social a href = ""nks profile</title>
+  <title>Frontend Mentor | Social links profile</title>
   <style>
     .attribution { font-size: 11px; text-aa href = ""gn: center; }
     .attribution a { color: var(--font-color2); }
